--- a/AP_2022170_2022375/AP_2022170_2022375/stickhero/src/main/resources/com/example/stickhero/EndingScene.fxml
+++ b/AP_2022170_2022375/AP_2022170_2022375/stickhero/src/main/resources/com/example/stickhero/EndingScene.fxml
@@ -134,7 +134,7 @@
                   <Font size="29.0" />
                </font>
             </Label>
-            <Button layoutX="286.0" layoutY="532.0" mnemonicParsing="false" onAction="#clickingHomeButton" prefHeight="74.0" prefWidth="170.0" style="-fx-background-color: #FF0000; -fx-background-radius: 30;" text="GO HOME" textFill="WHITE">
+            <Button layoutX="286.0" layoutY="532.0" mnemonicParsing="false" onAction="#clickingHomeButton" prefHeight="74.0" prefWidth="170.0" style="-fx-background-color: #FF0000; -fx-background-radius: 30;" text="EXIT GAME" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
