--- a/AP_2022170_2022375/AP_2022170_2022375/stickhero/src/main/resources/com/example/stickhero/MainScreen.fxml
+++ b/AP_2022170_2022375/AP_2022170_2022375/stickhero/src/main/resources/com/example/stickhero/MainScreen.fxml
@@ -32,13 +32,15 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stickhero.MainController">
+<AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.stickhero.MainController">
    <children>
       <Label alignment="CENTER" layoutX="155.0" layoutY="177.0" style="&#10;" text="Drag components from Library here…" textAlignment="CENTER" textFill="#9f9f9f" wrapText="false">
          <font>
@@ -50,7 +52,7 @@
             <Image url="@Properbackground.jpg" />
          </image>
       </ImageView>
-      <Rectangle fx:id="myoriginalrectangle" arcHeight="5.0" arcWidth="5.0" height="185.0" layoutX="-3.0" layoutY="525.0" stroke="WHITE" strokeType="INSIDE" width="158.0" />
+      <Rectangle fx:id="myoriginalrectangle" arcHeight="5.0" arcWidth="5.0" height="185.0" layoutY="525.0" stroke="WHITE" strokeType="INSIDE" width="158.0" />
       <ImageView fx:id="characterImageView" fitHeight="54.0" fitWidth="66.0" layoutX="100.0" layoutY="471.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@MainStickHero-removebg-preview.png" />
@@ -85,7 +87,7 @@
          </font>
       </Label>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#e40404" height="8.0" layoutX="348.0" layoutY="525.0" stroke="BLACK" strokeType="INSIDE" width="11.0" />
-      <Button layoutX="14.0" layoutY="31.0" mnemonicParsing="false" onAction="#clickingEndButton" prefHeight="39.0" prefWidth="116.0" style="-fx-background-color: #62acec;" text="Go to end screen" />
+      <Button layoutX="14.0" layoutY="31.0" mnemonicParsing="false" onAction="#clickingEndButton" prefHeight="39.0" prefWidth="116.0" style="-fx-background-color: #62acec;" text="SAVE and EXIT" />
       <ImageView fx:id="myCherryView" fitHeight="39.0" fitWidth="41.0" layoutX="155.0" layoutY="525.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@Cherry.png" />
